# aadc-2017

./: CMakeLists.txt  LICENSE
HTWK_Behavior_Tree/: CMakeLists.txt
HTWK_Behavior_Tree/HTWK_CompositeNode/: CMakeLists.txt  CompositeNode.cpp  CompositeNode.h
HTWK_Behavior_Tree/HTWK_Compositor_Sequence/: CMakeLists.txt  Sequence.cpp  Sequence.h
HTWK_Behavior_Tree/HTWK_DebugNode/: CMakeLists.txt  DebugNode.cpp  DebugNode.h
HTWK_Behavior_Tree/HTWK_DecoratorNode/: CMakeLists.txt  DecoratorNode.cpp  DecoratorNode.h
HTWK_Behavior_Tree/HTWK_Decorator_Inverter/: CMakeLists.txt  Inverter.cpp  Inverter.h  stdafx.h
HTWK_Behavior_Tree/HTWK_LeafNode/: CMakeLists.txt  Leaf.cpp  Leaf.h
HTWK_Behavior_Tree/HTWK_Selector/: CMakeLists.txt  Selector.cpp  Selector.h
HTWK_Bool_Signal_Generator/: BoolSignalGenerator.cpp  BoolSignalGenerator.h  CMakeLists.txt
HTWK_Brake/: Brake.cpp  Brake.h  CMakeLists.txt
HTWK_Camera/: CMakeLists.txt
HTWK_Camera/HTWK_Basler/: BaslerCamera.cpp  BaslerCamera.h  CMakeLists.txt
HTWK_Camera/HTWK_PointClouds/: CMakeLists.txt  PointClouds.cpp  PointClouds.h  stdafx.h
HTWK_Camera/HTWK_Realsense/: CMakeLists.txt  RealsenseCamera.cpp  RealsenseCamera.h  stdafx.h
HTWK_Car_Trajectory/: CMakeLists.txt  CarTrajectory.cpp  CarTrajectory.h
HTWK_ChangeSpeed/: CMakeLists.txt  ChangeSpeed.cpp  ChangeSpeed.h
HTWK_Classification/: CMakeLists.txt
HTWK_Classification/HTWK_ClassificationServer/: CMakeLists.txt  ClassificationServer.cpp  ClassificationServer.h
HTWK_Classification/HTWK_ClassificationServer/ThriftInterface/: .gitignore  HtwkNet.py  ThriftInterface.thrift  ThriftServer.py  eval_net.py  generate.sh  generate_cpp.sh  generate_python.sh  htwk_keras_utils.py  prepare_python.sh  prepare_python_cpu.sh  train.py
HTWK_ControllerPID/: CMakeLists.txt  HTWKControllerPID.cpp  HTWKControllerPID.h  stdafx.h
HTWK_Debug/: CMakeLists.txt  EnableLogs.h
HTWK_Debug/Video/: CMakeLists.txt
HTWK_Debug/Video/CropObjects/: CMakeLists.txt  CropObjects.cpp  CropObjects.h
HTWK_Debug/Video/IrToDisparity/: CMakeLists.txt  IrToDisparity.cpp  IrToDisparity.h  stdafx.h
HTWK_Debug/Video/Playback/: CMakeLists.txt  VideoPlaybackOpenCV.cpp  VideoPlaybackOpenCV.h
HTWK_Debug/Video/Record/: CMakeLists.txt  VideoRecordOpenCV.cpp  VideoRecordOpenCV.h  stdafx.h
HTWK_Emergency_Stop/: CMakeLists.txt  EmergenyStop.cpp  EmergenyStop.h
HTWK_Jury_Response/: CMakeLists.txt  JuryResponse.cpp  JuryResponse.h
HTWK_LaneFollowing/: CMakeLists.txt
HTWK_LaneFollowing/HTWK_LaneDetection/: CMakeLists.txt  LaneDetectionFilter.cpp  LaneDetectionFilter.h  SpatioTemporalImage.cpp  SpatioTemporalImage.h  SpatioTemporalLaneDetector.cpp  SpatioTemporalLaneDetector.h  stdafx.h
HTWK_LaneFollowing/HTWK_LaneSteering/: CMakeLists.txt  LaneSteeringCalculator.cpp  LaneSteeringCalculator.h  LaneSteeringFilter.cpp  LaneSteeringFilter.h  stdafx.h
HTWK_LaneSteering/: CMakeLists.txt  LaneWorldOut.cpp  LaneWorldOut.h  SteeringFusion.cpp  SteeringFusion.h
HTWK_Light_Controller/: CMakeLists.txt  LightController.cpp  LightController.h
HTWK_Light_Detector/: CMakeLists.txt  LightDetector.cpp  LightDetector.h
HTWK_Map/: CMakeLists.txt  MapElement.h  MapTileManager.cpp  MapTileManager.h  Orientation.h  TilePoint.h  TrackMap.cpp  TrackMap.h
HTWK_Map/Tiles/: LargeTurn.h  PlusCrossing.h  STurnLeft.h  STurnRight.h  SmallTurn.h  Straight.h  TCrossing.h  Tiles.h  Turn.h
HTWK_MapDriver/: CMakeLists.txt  MapDriver.cpp  MapDriver.h
HTWK_MapPredictor/: CMakeLists.txt  DataTypes.h  MapDrawer.cpp  MapDrawer.h  MapPredictor.cpp  MapPredictor.h  main.cpp  signs.xml
HTWK_MapView/: CMakeLists.txt  MapView.cpp  MapView.h
HTWK_MapWorker/: CMakeLists.txt  MapWorker.cpp  MapWorker.h
HTWK_Marker/: CMakeLists.txt
HTWK_Marker/HTWK_MarkerDetector/: CMakeLists.txt  MarkerDetectorFilter.cpp  MarkerDetectorFilter.h  aruco_helpers.h
HTWK_Marker/HTWK_MarkerPos/: CMakeLists.txt  MarkerPositioningFilter.cpp  MarkerPositioningFilter.h
HTWK_Occ_Grid_Map/: CMakeLists.txt  GridMaps.cpp  GridMaps.h
HTWK_Parking/: CMakeLists.txt  Parking.cpp  Parking.h
HTWK_Parking_Occupancy/: CMakeLists.txt  parkingOccupancy.cpp  parkingOccupancy.h
HTWK_ROI_Cutter/: CMakeLists.txt  RoiCutter.cpp  RoiCutter.h  stdafx.h
HTWK_Signal_Generator/: CMakeLists.txt  SignalGenerator.cpp  SignalGenerator.h  stdafx.h
HTWK_State_Signal_Generator/: CMakeLists.txt  StateSignalGenerator.cpp  StateSignalGenerator.h
HTWK_Stixel/: CMakeLists.txt
HTWK_Stixel/HTWK_ObstacleFiltering/: CMakeLists.txt
HTWK_Stixel/HTWK_StixelWorld/: CMakeLists.txt  StixelWorldFilter.cpp  StixelWorldFilter.h  camera008.xml  camera009.xml
HTWK_Stixel/HTWK_StixelsToRois/: CMakeLists.txt  StixelsToRoisFilter.cpp  StixelsToRoisFilter.h
HTWK_Types/: BehaviorTreeData.h  CameraProperties.h  CameraResolutionData.h  InitalRoadSign.h  IntersectionState.h  LaneData.h  ManeuverList.h  ManueverEnum.h  MapChange.h  MapTileType.h  ObstacleData.h  ParkingLot.h  PoliceData.h  RoadSignDetectionResult.h  RoadSignEnum.h  RoadSignExt.h  StixelData.h  TrackingData.h  ZebraState.h
HTWK_Us_Obstacle_Detection/: CMakeLists.txt  UsObstacleDetection.cpp  UsObstacleDetection.h
HTWK_Utils/: CMakeLists.txt  HTWKLine.cpp  HTWKLine.h  HTWKMathUtils.cpp  HTWKMathUtils.hpp  HTWKPoint.cpp  HTWKPoint.hpp  HTWKUtils.cpp  HTWKUtils.hpp  HTWKVisionUtils.cpp  HTWKVisionUtils.h  HTWK_OpenCV_helper.h  ImageHelper.h  VectorHelper.h
HTWK_world_in_filter/: CMakeLists.txt  WorldFilterIn.cpp  WorldFilterIn.h
HTWK_world_out_filter/: CMakeLists.txt  WorldFilterOut.cpp  WorldFilterOut.h
HTWK_world_out_filter_base/: CMakeLists.txt  WorldOutBaseFilter.cpp  WorldOutBaseFilter.h  stdafx.h
HTWK_world_out_template/: CMakeLists.txt  WorldOutTemplateFilter.cpp  WorldOutTemplateFilter.h  stdafx.h
HTWK_world_service/: CMakeLists.txt  WorldService.cpp  htwk_world_service.manifest
HTWK_world_service/debug/: htwk_world_service.manifest
HTWK_world_service_h/: CMakeLists.txt  WorldService.h  tWorldData.h
lib/: CMakeLists.txt
lib/tinyxml2/: CMakeLists.txt  Makefile  dox  xmltest.cpp
(+12 files in other folders)
